3.3-kubernetes-services-ingress-lab-JSREVIEW-YAOBANK/3.3-yaobank.yaml
apiVersion: v1
kind: Namespace
apiVersion: v1
metadata:
  name: yaobank
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: yaobank
  labels:
    app: database
spec:
  ports:
  - port: 2379
    name: http
  selector:
    app: database
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: database
  namespace: yaobank
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        version: v1
    spec:
      serviceAccountName: database
      containers:
      - name: database
        image: spikecurtis/yaobank-database:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2379
        command: ["etcd"]
        args:
          - "-advertise-client-urls"
          - "http://database:2379"
          - "-listen-client-urls"
          - "http://0.0.0.0:2379"
      nodeSelector:
        labnode: worker2
---
apiVersion: v1
kind: Service
metadata:
  name: summary
  namespace: yaobank
  labels:
    app: summary
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: summary
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: summary
  namespace: yaobank
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: summary
        version: v1
    spec:
      serviceAccountName: summary
      containers:
      - name: summary
        image: spikecurtis/yaobank-summary:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: yaobank
  labels:
    app: customer
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: customer
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer
  namespace: yaobank
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      serviceAccountName: customer
      containers:
      - name: customer
        image: v1k0d3n/yaobank-customer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        labnode: worker1
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-yaobank-customer 
  namespace: yaobank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: user.yaobank.lab.tigera.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: customer
          servicePort: 80
